feat: API
more API methods ans swagger updates
